--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@tanstack/react-query": "^4.29.17",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
+    "firebase": "^9.23.0",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
+    "react-hook-form": "^7.45.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
     "swiper": "^9.4.0"
